Fixes friend-index 1px too short

--- a/app/assets/stylesheets/components/_card_event_parent.scss
+++ b/app/assets/stylesheets/components/_card_event_parent.scss
@@ -85,7 +85,7 @@
   }
 
   .myfriends-scrollable {
-    height: 675px;
+    height: 676px;
     overflow-y: auto;
     -ms-overflow-style: none;
     scrollbar-width: none;
